--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ pyOpenSSL==22.0.0
 pyparsing==3.0.9
 PySocks==1.7.1
 pytest==7.1.2
+python-dotenv==0.20.0
 requests==2.27.1
 selenium==4.2.0
 six==1.16.0
@@ -28,4 +29,5 @@ tomli==2.0.1
 trio==0.20.0
 trio-websocket==0.9.2
 urllib3==1.26.9
+webdriver-manager==3.7.0
 wsproto==1.1.0
