Final Project for Jenkins with Allure (added allure severity)

--- a/tests/pytest.ini
+++ b/tests/pytest.ini
@@ -1,6 +1,7 @@
 [pytest]
 markers =
+  smoke: Run smoke tests to reveal simple failures in this project.
   user_api: Run the tests related to user in API tests.
   pet_api: Run the tests related to pet in API tests.
-  negative: Run all negative tests in this project.
-  positive: Run all positive tests in this project.
+  negative: Run negative tests in this project.
+  positive: Run positive tests in this project.
